kubernetes/app-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: lucastercas/spring
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8080
