kubernetes/app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
    - port: 8080
      targetPort: http
      nodePort: 30045
      protocol: TCP
